[package]
name = "drift-indexer-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-attribute-event = "*"
anchor-lang = "*"
async-trait = "0.1.68"
futures ="*"
log = "*"
mongodb = "*"
serde = "*"
solana-rpc-client = "1.16.*"
solana-rpc-client-api = "1.16.*"
solana-sdk = "1.16.*"
solana-transaction-status = "1.16.*"
tokio = { version = "*", features = ["full"] }

idl-gen = { path = "../idl-gen" }

[dev-dependencies]
serde_json = "*"
